--- a/index.html
+++ b/index.html
@@ -6,16 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Allison&display=swap" rel="stylesheet">
 </head>
 <body>
+    <section class="input"> 
+        <input id="input-name"> 
+        <button id="button"> update </button>
+    </input>
+    </section>
     <div class="paper">
 <div class="tag">
-    <h1> Hello</h1>
+    <h1> HELLO</h1>
     <h2> my name is</h2>
-    <p>Kibby </p>
+    <div class="kibby" id="new-name">
+    Kibby
+    </div>
     <footer></footer>
 </div>
     </div>
+
+    <script src="app.js" type="module"> </script>
     
 </body>
 </html>
